# app/Http/Requests/ClientRequest/StoreRequest.php
@@ -1,0 +1,39 @@
+<?php
+
+namespace App\Http\Requests\ClientRequest;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'first_name' => 'required|string|max:255',
+            'last_name' => 'required|string|max:255',
+            'patronymic' => 'nullable|string|max:255',
+            'phone' => 'required|string|unique:users,phone',
+            'email' => 'required|email|unique:users,email',
+            'birth_date' => 'required|date',
+            'gender' => 'required|in:male,female',
+            'fcm_token' => 'nullable|string',
+            'device' => 'nullable|string|max:255',
+            'division_id' => 'nullable|exists:divisions,id',
+            'dop_info' => 'nullable|string',
+            'avatar' => 'nullable|image|mimes:jpeg,png,jpg|max:2048',
+        ];
+    }
+}
